# Hackathon-2025

./: .gitignore  HACKATHON_SCHEDULE.md  Hackathon 2025 - slides [PowerPoint] (12-Sep-2025-2.42pm).pptx  README.md  SCENARIOS.md
demo/: demo.powerpoint.placeholder  demo_template 1.pptx  event.powerpoint.placeholder
demo/example/: demo.pptx
src/: README.md
src/agent/: README.md  attractions.ipynb  attractions.py  chat.html  requirements.txt  run-server.ps1  server.py
src/mcp/: runmcp.ps1
src/mcp/attractions-mcp/: README.md  __init__.py  attractions_service.py  config.py  main.py  models.py  pyproject.toml  utils.py
src/mcp/emojifier-mcp/: main.py
src/mcp/endorsements-mcp/: README.md  config.py  endorsements_service.py  main.py  models.py  pyproject.toml  utils.py
src/mcp/packing-mcp/: README.md  config.py  main.py  models.py  pyproject.toml
src/mcp/packing-suggestions-mcp/: main.py  packing_service.py  utils.py
src/mcp/persist-packing-list-mcp/: README.md  config.py  main.py  models.py  packing_service.py  persist-packing-list.md  pyproject.toml  utils.py
src/mcp/weather-mcp/: README.md  __init__.py  config.py  main.py  models.py  pyproject.toml  utils.py  weather_service.py
